<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_coordinator_layout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/login_box"
            android:layout_width="@dimen/card_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/enter_text_upper"
                        android:textAllCaps="true"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/enter_text_20"
                        />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24"
                    >

                    <EditText
                        android:id="@+id/login_email"
                        style="@style/maintext.login"
                        android:enabled="true"
                        android:hint="@string/emailName"
                        android:inputType="textEmailAddress"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:layout_marginRight="@dimen/spacing_medial_24"

                    >

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/maintext.login"
                        android:enabled="true"
                        android:hint="@string/password_text"
                        android:inputType="textPassword"
                        />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/login_btn"
                    style="@style/AppTheme.Button.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:minWidth="@dimen/login_btn_min_width"
                    android:text="@string/enter_button_text"
                    android:theme="@style/AppTheme.Button.Red"/>

                <TextView
                    android:id="@+id/lost_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_medial_24"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:text="@string/forget_password_text"/>
                <TextView
                    android:id="@+id/skip_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_medial_24"
                    android:text="@string/skip_login_text"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>